app/assets/stylesheets/jcarousel.scss
.jcarousel {
  position: relative;
  overflow: hidden;
  /* You need at least a height, adjust this to your needs */
  .embeddables {
    position: absolute;
    list-style: none;
    margin: 0;
    padding: 0;
    width: 200000em;
  }
  .question {
    float: left;
    overflow-x: hidden;
    overflow-y: auto;
    
  }
  .buttons {
    position: absolute;
    width: 100%;
    bottom: 0;
    border-top: 1px solid #ededed;
    input[type="submit"] {
      margin-top: 8px;
    }
  }
  .jcarousel-prev {
    float: left;
    margin-bottom: 5px;
  }
  .jcarousel-next {
    float: right;
    margin-bottom: 5px;
  }
}

